Added `Interface.this`-like API